Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,8 @@ steps:
     sshEndpoint: $(sshVMDetails)
     runOptions: commands
     commands: |
-      sudo echo "hi everyone" > /var/www/html/index.html
+      echo "hi everyone" > index.html
+      sudo cp index.html /var/www/html/index.html
       sudo systemctl restart nginx
     
 
