--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
   - task: Docker@2
     inputs:
       containerRegistry: '$(registryServiceConnection)'
-      repository: '$(url)/$(imagename)'
+      repository: '$(imagename)'
       command: buildAndPush
       Dockerfile: "./Dockerfile"
       tags: '$(Build.BuildId)'
